--- a/Pandas_for_Lesson_5.ipynb
+++ b/Pandas_for_Lesson_5.ipynb
@@ -630,33 +630,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Обращение к ячейке"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.3"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.at['Литература', 'Петя']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Клава хочет быть переименованной в Клавдию"
    ]
   },
@@ -1287,7 +1260,7 @@
    ],
    "source": [
     "df.loc[:, df.loc['English']>2] \n",
-    "# выбрать все столбцы, у которых в строке `Derivatives` оценка больше двух"
+    "# выбрать все столбцы, у которых в строке `English` оценка больше двух"
    ]
   },
   {
@@ -1836,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1894,40 +1867,40 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2019</th>\n",
        "      <th>1</th>\n",
-       "      <td>39.0</td>\n",
-       "      <td>36.7</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>36.4</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>36.1</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>56.9</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>58.4</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>58.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>37.2</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>35.9</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>58.3</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>56.8</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>56.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2020</th>\n",
        "      <th>1</th>\n",
-       "      <td>39.0</td>\n",
-       "      <td>37.7</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>36.4</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>37.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>56.7</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>56.4</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>56.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>38.3</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>36.8</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>37.9</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>56.7</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>56.6</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>56.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1937,13 +1910,13 @@
        "subject      Bob       Guido         Sue      \n",
        "type          HR  Temp    HR  Temp    HR  Temp\n",
        "year visit                                    \n",
-       "2019 1      39.0  36.7  32.0  36.4  44.0  36.1\n",
-       "     2      21.0  37.2  32.0  39.3  25.0  35.9\n",
-       "2020 1      39.0  37.7  34.0  36.4  51.0  37.0\n",
-       "     2      50.0  38.3  37.0  36.8  34.0  37.9"
+       "2019 1      54.0  56.9  54.0  58.4  59.0  58.9\n",
+       "     2      66.0  58.3  52.0  56.8  58.0  56.8\n",
+       "2020 1      60.0  56.7  58.0  56.4  60.0  56.3\n",
+       "     2      55.0  56.7  65.0  56.6  41.0  56.8"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1931,7 @@
     "# mock some data\n",
     "data = np.round(np.random.randn(4, 6), 1)\n",
     "data[:, ::2] *= 10\n",
-    "data += 37\n",
+    "data += 57\n",
     "\n",
     "# create the DataFrame\n",
     "health_data = pd.DataFrame(data, index=index, columns=columns)\n",
@@ -1967,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2006,24 +1979,24 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2019</th>\n",
        "      <th>1</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>36.4</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>58.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>39.3</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>56.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2020</th>\n",
        "      <th>1</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>36.4</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>56.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>37.0</td>\n",
-       "      <td>36.8</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>56.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2032,13 +2005,13 @@
       "text/plain": [
        "type          HR  Temp\n",
        "year visit            \n",
-       "2019 1      32.0  36.4\n",
-       "     2      32.0  39.3\n",
-       "2020 1      34.0  36.4\n",
-       "     2      37.0  36.8"
+       "2019 1      54.0  58.4\n",
+       "     2      52.0  56.8\n",
+       "2020 1      58.0  56.4\n",
+       "     2      65.0  56.6"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,21 +2022,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "year  visit\n",
-       "2019  1        32.0\n",
-       "      2        32.0\n",
-       "2020  1        34.0\n",
-       "      2        37.0\n",
+       "2019  1        54.0\n",
+       "      2        52.0\n",
+       "2020  1        58.0\n",
+       "      2        65.0\n",
        "Name: (Guido, HR), dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2122,13 +2095,13 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2019</th>\n",
        "      <th>1</th>\n",
-       "      <td>39.0</td>\n",
-       "      <td>36.7</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>56.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>37.2</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>58.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2138,11 +2111,11 @@
        "subject      Bob      \n",
        "type          HR  Temp\n",
        "year visit            \n",
-       "2019 1      39.0  36.7\n",
-       "     2      21.0  37.2"
+       "2019 1      54.0  56.9\n",
+       "     2      66.0  58.3"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2265,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2296,7 +2269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
