--- a/Практика_к_занятию_5_Empty.ipynb
+++ b/Практика_к_занятию_5_Empty.ipynb
@@ -36,7 +36,7 @@
     "В итоговом DataFrame столбец \"Показатель\" сделайте индексным.\n",
     "\n",
     "\n",
-    "Загзрузка DataFrame выполняется непосредственно сайта \"Открытые данные России\" https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv (см. код ниже).\n"
+    "Загзрузка DataFrame выполняется непосредственно c сайта \"Открытые данные России\" https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv (см. код ниже).\n"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
