--- a/Занятие 4 демо.ipynb
+++ b/Занятие 4 демо.ipynb
@@ -6,7 +6,7 @@
     "id": "bEqyY7GNakiV"
    },
    "source": [
-    "# Занятие 11"
+    "# Занятие 4"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "id": "t2LJmX2vbCEM"
    },
@@ -52,12 +52,11 @@
     {
      "data": {
       "text/plain": [
-       "array([-1.37872261e+00,  5.92787339e+00,  5.48026140e-03,  2.70302292e+00,\n",
-       "        4.26747879e+00, -1.38185500e+00, -7.97733997e+00,  3.16466986e+00,\n",
-       "       -1.93677340e+00, -3.14696089e+00])"
+       "array([-2.50232726, -2.2173115 ,  0.9957403 ,  5.07586651,  1.56161614,\n",
+       "        1.25711076, -1.1018669 ,  0.85699461,  1.68428345,  9.47997717])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "id": "fdA0vcGMbwnD"
    },
@@ -96,7 +95,7 @@
        "0.5987063256829237"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "id": "S9JXn3htb87K"
    },
@@ -119,7 +118,7 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "id": "E8nG90AKb3lu"
    },
@@ -159,7 +158,7 @@
        "0.09666702920071232"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "id": "6cVrqd7acWlI"
    },
@@ -182,7 +181,7 @@
        "[]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "id": "jioI_1MZcdKP"
    },
@@ -228,11 +227,11 @@
     {
      "data": {
       "text/plain": [
-       "array([2.23329438, 1.47228077, 3.59610325, 3.14763384, 1.57913264,\n",
-       "       1.78478885, 1.40196468, 2.35767534, 2.30484199, 1.84281445])"
+       "array([1.46793644, 3.25128422, 3.53416171, 3.18670668, 3.02636785,\n",
+       "       1.45438622, 3.43763795, 3.16014357, 2.86094524, 2.27943783])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "id": "KXlkKTStdQSB"
    },
@@ -259,7 +258,7 @@
        "[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "id": "jhEzp75jdT32"
    },
@@ -298,7 +297,7 @@
        "[]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "id": "NNadlbnHd-qe"
    },
@@ -361,14 +360,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0])"
+       "array([0, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +371,7 @@
    "source": [
     "bernoulli_rv = sts.bernoulli(0.7) # задаётся один параметр -- вероятность успеха\n",
     "\n",
-    "bernoulli_rv.rvs(100)"
+    "bernoulli_rv.rvs(10)"
    ]
   },
   {
@@ -391,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "id": "y2gxvN9QeJaT"
    },
@@ -399,10 +394,15 @@
     {
      "data": {
       "text/plain": [
-       "array([10,  5,  5, 11, 10, 12,  6,  5,  9,  8])"
+       "array([ 6,  9,  8,  4, 11,  8, 10,  9, 10,  8,  9,  8,  9,  7,  7,  9,  7,\n",
+       "        7,  4,  7,  7,  6,  7,  8,  8,  8,  9,  8, 10,  2, 11,  8,  7,  6,\n",
+       "        5,  8,  6,  7, 10,  9, 10,  6,  6,  8,  6,  9,  6, 12,  8, 10,  4,\n",
+       "        6, 11,  8,  9,  7,  5, 11, 10,  3,  9,  8, 11,  6,  8,  5,  8, 10,\n",
+       "       13,  8,  5, 12, 12,  7,  7,  8,  7,  8,  9,  9, 10,  9,  7,  7, 11,\n",
+       "       10,  8,  7,  9,  6,  9,  6,  7,  7, 11,  8,  6,  8,  7,  7])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "id": "wLsVBjExea7L"
    },
@@ -426,7 +426,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "id": "PwGmoi44epbM"
    },
@@ -475,7 +475,7 @@
        "[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "id": "3gQKlWE6e8ps"
    },
@@ -523,7 +523,7 @@
        "[]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "id": "kUS_bW5ffTeR"
    },
@@ -568,7 +568,7 @@
        "[]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "id": "yPyPR_Y6f7eC"
    },
@@ -619,10 +619,10 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 3, 1, 3, 1, 4, 3, 5, 8, 3])"
+       "array([ 3,  4, 11, 10,  7,  3,  1,  6,  7,  4])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "id": "XyINnishg0QA"
    },
@@ -645,7 +645,7 @@
        "[]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "id": "rE-4LUGog0QG"
    },
@@ -689,7 +689,7 @@
        "[]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,7 +749,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1,  5,  1,  5, 12, 12,  1,  5,  1,  5])"
+       "array([ 5, 12,  5, 12,  5, 12,  5, 12,  1, 12])"
       ]
      },
      "execution_count": 5,
@@ -770,7 +770,7 @@
     "id": "UZ5zOlf4hQ8F"
    },
    "source": [
-    "список доступных распределений https://docs.scipy.org/doc/scipy/reference/stats.html"
+    "список доступных распределений http://scipy.github.io/devdocs/reference/stats.html#module-scipy.stats"
    ]
   },
   {
