--- a/Практика_к_занятию_4_Empty.ipynb
+++ b/Практика_к_занятию_4_Empty.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -213,15 +213,16 @@
     }
    ],
    "source": [
-    "url =\"https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv\"\n",
+    "\"\"\"url =\"https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv\"\n",
     "s = requests.get(url).content\n",
-    "df=pd.read_csv(io.StringIO(s.decode('UTF8')))\n",
+    "df=pd.read_csv(io.StringIO(s.decode('UTF8')))\"\"\"\n",
+    "df=pd.read_csv(\"Химический анализ родника в Нескучном саду.csv\", sep=';')\n",
     "display(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "o7NjAE9uUo-L"
    },
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
