--- a/Практика_к_занятию_4_Empty.ipynb
+++ b/Практика_к_занятию_4_Empty.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import requests\n",
-    "import io\n",
-    "import re\n"
+    "import requests # for web-download\n",
+    "import io # for web-download\n",
+    "import re # for data processing\n"
    ]
   },
   {
@@ -213,10 +213,11 @@
     }
    ],
    "source": [
-    "\"\"\"url =\"https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv\"\n",
+    "url =\"https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv\"\n",
     "s = requests.get(url).content\n",
-    "df=pd.read_csv(io.StringIO(s.decode('UTF8')))\"\"\"\n",
-    "df=pd.read_csv(\"Химический анализ родника в Нескучном саду.csv\", sep=';')\n",
+    "df=pd.read_csv(io.StringIO(s.decode('UTF8')))\n",
+    "### Если не работает загрузка on-line\n",
+    "# df=pd.read_csv(\"Химический анализ родника в Нескучном саду.csv\", sep=';')\n",
     "display(df)"
    ]
   },
@@ -302,7 +303,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
