--- a/Descriptive_Statistics.ipynb
+++ b/Descriptive_Statistics.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -253,17 +256,6 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  iloc._setitem_with_indexer(indexer, value)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -703,8 +695,8 @@
      "data": {
       "text/plain": [
        "sepal.length       4.3\n",
-       "sepal.width          2\n",
-       "petal.length         1\n",
+       "sepal.width        2.0\n",
+       "petal.length       1.0\n",
        "petal.width        0.1\n",
        "variety         Setosa\n",
        "dtype: object"
@@ -1061,7 +1053,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Virginica</td>\n",
+       "      <td>Setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -1132,18 +1124,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        sepal.length  sepal.width  petal.length  petal.width    variety\n",
-       "count     150.000000   150.000000    150.000000   146.000000        150\n",
-       "unique           NaN          NaN           NaN          NaN          3\n",
-       "top              NaN          NaN           NaN          NaN  Virginica\n",
-       "freq             NaN          NaN           NaN          NaN         50\n",
-       "mean        5.843333     3.057333      3.758000     1.173973        NaN\n",
-       "std         0.828066     0.435866      1.765298     0.756221        NaN\n",
-       "min         4.300000     2.000000      1.000000     0.100000        NaN\n",
-       "25%         5.100000     2.800000      1.600000     0.300000        NaN\n",
-       "50%         5.800000     3.000000      4.350000     1.300000        NaN\n",
-       "75%         6.400000     3.300000      5.100000     1.800000        NaN\n",
-       "max         7.900000     4.400000      6.900000     2.500000        NaN"
+       "        sepal.length  sepal.width  petal.length  petal.width variety\n",
+       "count     150.000000   150.000000    150.000000   146.000000     150\n",
+       "unique           NaN          NaN           NaN          NaN       3\n",
+       "top              NaN          NaN           NaN          NaN  Setosa\n",
+       "freq             NaN          NaN           NaN          NaN      50\n",
+       "mean        5.843333     3.057333      3.758000     1.173973     NaN\n",
+       "std         0.828066     0.435866      1.765298     0.756221     NaN\n",
+       "min         4.300000     2.000000      1.000000     0.100000     NaN\n",
+       "25%         5.100000     2.800000      1.600000     0.300000     NaN\n",
+       "50%         5.800000     3.000000      4.350000     1.300000     NaN\n",
+       "75%         6.400000     3.300000      5.100000     1.800000     NaN\n",
+       "max         7.900000     4.400000      6.900000     2.500000     NaN"
       ]
      },
      "execution_count": 26,
@@ -1379,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1409,14 +1401,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>7.900000</td>\n",
        "      <td>6.900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.758000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
@@ -1424,14 +1416,14 @@
        "      <td>4.350000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>4.300000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>sem</th>\n",
        "      <td>0.067611</td>\n",
        "      <td>0.144136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.758000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sum</th>\n",
@@ -1444,11 +1436,11 @@
       ],
       "text/plain": [
        "        sepal.length  petal.length\n",
-       "max         7.900000      6.900000\n",
-       "mean             NaN      3.758000\n",
-       "median      5.800000      4.350000\n",
        "min         4.300000      1.000000\n",
+       "max         7.900000      6.900000\n",
+       "median      5.800000      4.350000\n",
        "sem         0.067611      0.144136\n",
+       "mean             NaN      3.758000\n",
        "sum              NaN    563.700000"
       ]
      },
@@ -1474,7 +1466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1488,7 +1480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
