--- a/Практика_к_занятию_4_Empty.ipynb
+++ b/Практика_к_занятию_4_Empty.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,11 +213,22 @@
     }
    ],
    "source": [
+    "headers={\n",
+    "    'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
+    "}\n",
+    "def get_content(url):\n",
+    "    with requests.Session() as req:\n",
+    "        req.headers.update(headers)\n",
+    "        r = req.get(url).content\n",
+    "    return r\n",
+    "\n",
     "url =\"https://data.gov.ru/opendata/7708660670-rodnik-neskuchniy-sad/data-20160608T1215-structure-20160608T1215.csv\"\n",
-    "s = requests.get(url).content\n",
+    "s = get_content(url)\n",
     "df=pd.read_csv(io.StringIO(s.decode('UTF8')))\n",
+    "\n",
+    "\n",
     "### Если не работает загрузка on-line\n",
-    "# df=pd.read_csv(\"Химический анализ родника в Нескучном саду.csv\", sep=';')\n",
+    "#df=pd.read_csv(\"Химический анализ родника в Нескучном саду.csv\", sep=';')\n",
     "display(df)"
    ]
   },
@@ -317,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
